# stonks

./: .gitignore  Cargo.toml  Dockerfile
deploy/: README.md  deploy.py  requirements.txt  stonks.template  stonks.yaml  template.py  userData.sh
src/: main.rs
