[package]
name = "stonks"
version = "0.1.0"
authors = ["Steven Pequeno <steven@pequeno.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
reqwest = { version = "0.10", default-features = false, features=["rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
